# Visual-Receptive-Sim

./: .coverage  PERFORMANCE.txt  README.md  main.py  requirements-test.txt  requirements.txt
.github/workflows/: docs.yml  tests.yml
.mplconfig/: fontlist-v390.json
data/: cone_fundamentals.csv
docs/: README.md  TESTING.md  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/concepts/: biology.rst  equations.rst  (+1 more)
hot_numerical/: .gitignore  README.md  __init__.py  convolve_2d.c  convolve_2d.pyx  layer_update.c  layer_update.pyx  rf_probe_sweep.c  rf_probe_sweep.pyx  setup.py  stimulus_fill.c  stimulus_fill.pyx
legacy/: Cargo.toml  README.md
legacy/src/: lib.rs  main.rs
legacy/src/circuit/: amacrine.rs  bipolar.rs  cones.rs  horizontal.rs  mod.rs  retina.rs  rgc.rs
legacy/src/compute/: gaussian.rs  lms_matrix.rs  mod.rs  pipeline.rs  sigmoid.rs
legacy/src/gui/: controls.rs  layout.rs  mod.rs  state.rs
legacy/src/stimulus/: color.rs  mod.rs
legacy/src/viz/: cell_trace.rs  firing_panel.rs  heatmap.rs  layer_stack.rs  mod.rs  volume.rs
rgbtolms/: LMS.txt  RGB.txt  lissom_rgbtolms.c  readme.txt  rgb3toppmmacro  rgbtolms  rgbtolms.h
scripts/: generate_cone_fundamentals.py  generate_doc_example_plots.py
src/: __init__.py  config.py
tests/: README.md  bench_3d_viewer.py  bench_performance.py  conftest.py  test_biology.py  test_config.py  test_fast_conv.py  test_heatmap.py  test_layers.py  test_pipeline.py  test_rendering.py  test_rf_probe.py  test_rgb_mapping.py  test_rgc_population.py  test_state.py  test_stimulus.py  test_ui_ux.py
(+110 files in other folders)
