[package]
name = "rgc-circuit-sim"
version = "0.1.0"
edition = "2021"
description = "RGC simulator: receptive fields emerge from layered retinal circuit"

[dependencies]
ndarray = "0.15"
rand = "0.8"
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
image = "0.24"
rayon = "1.8"
colorgrad = "0.6"
nalgebra = "0.32"
